syntax = "proto3";
import "google/protobuf/struct.proto";	

package function;

option go_package = "./proto;function";

service Function {
	rpc Call(CallRequest) returns (CallResponse) {}
	rpc Deploy(DeployRequest) returns (DeployResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc Describe(DescribeRequest) returns (DescribeResponse) {}
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
	rpc Proxy(ProxyRequest) returns (ProxyResponse) {}
	rpc Regions(RegionsRequest) returns (RegionsResponse) {}
}

// Call a function by name
message CallRequest {
	// Name of the function
	string name = 1;
	// Request body that will be passed to the function
	google.protobuf.Struct request = 2;
}

message CallResponse {
	// Response body that the function returned
	google.protobuf.Struct response = 1;
}

// Deploy a group of functions
message DeployRequest {
	// function name
	string name = 1;
	// github url to repo
	string repo = 2;
	// optional subfolder path
	string subfolder = 3;
	// entry point, ie. handler name in the source code 
	// if not provided, defaults to the name parameter
	string entrypoint = 4;
	// project is used for namespacing your functions
	// optional. defaults to "default".
	string project = 5;
	// runtime/language of the function
	// eg: php74,
	// nodejs6, nodejs8, nodejs10, nodejs12, nodejs14, nodejs16
	// dotnet3
	// java11
	// ruby26, ruby27
	// go111, go113, go116
	// python37, python38, python39
	string runtime = 6;
	// environment variables to pass in at runtime
	map<string,string> env_vars = 7;
	// branch to deploy. defaults to master
	string branch = 8;
	// region to deploy in. defaults to europe-west1
	string region = 9;
}

message DeployResponse {
	Func function = 1;
}

// List all the deployed functions
message ListRequest {
	// optional project name
	string project = 1;
}

message Func {
	string id = 1;
	// project of function, optional
	// defaults to literal "default"
	// used to namespace functions
	string project = 2;
	// function name
	// limitation: must be unique across projects
	string name = 3;
	// name of handler in source code
	string entrypoint = 4;
	// git repo address
	string repo = 5;
	// subfolder path to entrypoint
	string subfolder = 6;
	// runtime/language of the function
	// eg: php74,
	// nodejs6, nodejs8, nodejs10, nodejs12, nodejs14, nodejs16
	// dotnet3
	// java11
	// ruby26, ruby27
	// go111, go113, go116
	// python37, python38, python39
	string runtime = 7;
	// eg. ACTIVE, DEPLOY_IN_PROGRESS, OFFLINE etc
	string status = 8;
	// associated env vars
	map<string,string> env_vars = 9;
	// branch to deploy. defaults to master
	string branch = 10;
	// region to deploy in. defaults to europe-west1
	string region = 11;
	// unique url of the function
	string url = 12;
	// time of creation
	string created = 13;
	// time it was updated
	string updated = 14;
}

message ListResponse {
	// List of functions deployed
	repeated Func functions = 1;
}

// Delete a function by name
message DeleteRequest {
	// The name of the function
	string name = 1;
	// Optional project name
	string project = 2;
}

message DeleteResponse {
	
}

// Get the info for a deployed function
message DescribeRequest {
	// The name of the function
	string name = 1;
	// Optional project name
	string project = 2;
}

message DescribeResponse {
	// The function requested
	Func function = 1;
}

// Update a function. Downloads the source, builds and redeploys
message UpdateRequest {
	// function name
	string name = 1;
	// optional project name
	string project = 2;
}

message UpdateResponse {
}

// Return the backend url for proxying
message ProxyRequest {
	// id of the function
	string id = 1;
}

message ProxyResponse {
	// backend url
	string url = 1;
}

// Return a list of supported regions
message RegionsRequest {
}

message RegionsResponse {
	repeated string regions = 1;
}
